version/0.3/_sources/examples/00-systemcoupling/index.rst.txt


.. _sphx_glr_examples_00-systemcoupling:

Coupled analysis examples
=========================
These examples show you how you can use System Coupling capabilities from Python to perform
coupled analyses. This includes importing setup data provided by participant solvers, initial
population of the System Coupling datamodel to define the analysis, subsequent modification and
interrogation of the data model, and running the System Coupling solver to perform the analysis.


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example is a version of the Oscillating Plate case that is often used as a tutorial for Sy...">

.. only:: html

  .. image:: /examples/00-systemcoupling/images/thumb/sphx_glr_oscillating_plate_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-systemcoupling_oscillating_plate.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscillating plate</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example is based on a steady FSI case where the fluid is flowing over a flexible plate. It...">

.. only:: html

  .. image:: /examples/00-systemcoupling/images/thumb/sphx_glr_parametric_sweep_vel_thumb.png
    :alt:

  :ref:`sphx_glr_examples_00-systemcoupling_parametric_sweep_vel.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Parametric sweep</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/00-systemcoupling/oscillating_plate
   /examples/00-systemcoupling/parametric_sweep_vel

